Restart the documentation effort using a mixture of autodoc and text

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -95,9 +95,9 @@ qthelp:
 	@echo
 	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
 	      ".qhcp project file in $(BUILDDIR)/qthelp, like this:"
-	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/networkzero.qhcp"
+	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/NetworkZero.qhcp"
 	@echo "To view the help file:"
-	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/networkzero.qhc"
+	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/NetworkZero.qhc"
 
 .PHONY: applehelp
 applehelp:
@@ -114,8 +114,8 @@ devhelp:
 	@echo
 	@echo "Build finished."
 	@echo "To view the help file:"
-	@echo "# mkdir -p $$HOME/.local/share/devhelp/networkzero"
-	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/networkzero"
+	@echo "# mkdir -p $$HOME/.local/share/devhelp/NetworkZero"
+	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/NetworkZero"
 	@echo "# devhelp"
 
 .PHONY: epub
