--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,36 @@
+# Based on https://github.com/pyca/cryptography/blob/master/.travis.yml
+
+sudo: false
+
 language: python
-python:
-  - "2.7"
-  - "3.3"
-  - "3.4"
-  - "3.5"
-# install dependencies
-install:
-    - pip install tox tox-travis
-# run test command
-script: tox
+
+matrix:
+    include:
+        - python: 2.7 # these are just to make travis's UI a bit prettier
+          env: TOXENV=py27
+        - python: 3.3
+          env: TOXENV=py33
+        - python: 3.4
+          env: TOXENV=py34
+        - python: 3.5
+          env: TOXENV=py35
+        - os: osx
+          language: generic
+          python: 2.7
+          env: TOXENV=py27
+        - os: osx
+          language: generic
+          python: 3.3
+          env: TOXENV=py33
+        - os: osx
+          language: generic
+          python: 3.4
+          env: TOXENV=py34
+        - os: osx
+          language: generic
+          python: 3.5
+          env: TOXENV=py35
+
+install: ./.travis/install.sh
+
+script: source ~/.venv/bin/activate && tox
