Only trigger Travis for master & dev (to avoid spurious failures with in-develpoment branches)

--- a/.travis.yml
+++ b/.travis.yml
@@ -63,3 +63,8 @@ matrix:
 install: ./.travis/install.sh
 
 script: source ~/.venv/bin/activate && tox
+
+branches:
+  only:
+    - master
+    - dev
